--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,24 +21,29 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
         {{#each restaurant}}
-        <a href="/restaurants/{{ this.id }}" class="text-secondary">
-          <div class="card mb-3">
+        <div class="card mb-3">
+          <a href="/restaurants/{{ this.id }}" class="text-secondary">
             <img class="card-img-top" src="{{ this.image }}" alt="{{ this.name }}">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{ this.name }}</h6>
-
               <div class="restaurant-category mb-1">
                 <i class="fas fa-utensils pr-2"></i> {{ this.category }}
               </div>
-
               <span class="badge badge-pill badge-danger font-weight-normal">
                 {{ this.rating }}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
             </div>
+          </a>
+          <div class="text-right">
+            <a href="/restaurants/{{this.id}}/edit" class="btn btn-secondary mr-1 mb-1">Edit</a>
+            <a href="/restaurants/{{this.id}}" class="btn btn-secondary mr-1 mb-1">Detail</a>
+            
+              <form action="/restaurants/{{this.id}}/delete" method="POST" class="form-for-delete">
+              <button type="submit" class="btn btn-outline-warning mr-1 mb-1">Delete</button>
+              </form>
           </div>
-        </a>
+        </div>  
         {{/each}}
       </div>
     </div>
