add 'delete feature', and delete data of mongoDB

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -23,5 +23,9 @@
         <label for="image">店家照片</label>
         <input type="text" name="image" id="image" value="{{restaurant.image}}">
     </div>
+    <div class="col-12">
+        <label for="rating">評分</label>
+        <input type="text" name="rating" id="rating" value="{{restaurant.rating}}">
+    </div>
     <button type="submit" class="col-12">Save</button>
 </form>
