--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,17 @@
         <!-- navigation -->
         <nav class="navbar navbar-light bg-light">
             <div class="container">
-            <a class="navbar-brand" href="/">
-                <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
-                我的餐廳清單
-                </a>
+                <div class="row col-12">
+                    <div class="col-6">
+                        <a class="navbar-brand" href="/">
+                        <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+                        我的餐廳清單
+                        </a>
+                    </div>
+                    <div class="col-6 btn">
+                        <a href="/new">Add a restaurant</a>
+                    </div>
+                </div>
             </div>
         </nav>
     <div class="banner"></div>
