--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -37,7 +37,7 @@
       <div class="text-center">
         <a href="/restaurants/{{restaurant.id}}/edit" class="btn btn-secondary mr-1 mb-1">Edit</a>
         <form action="/restaurants/{{restaurant.id}}/delete" method="POST" class="form-for-delete">
-          <button type="submit" class="btn btn-outline-warning mr-1 mb-1">Delete</button>
+          <button type="submit" class="btn btn-outline-warning mr-1 mb-1 delete-button">Delete</button>
         </form>
       </div>
     </div>
