--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,9 +38,8 @@
           <div class="text-right">
             <a href="/restaurants/{{this.id}}/edit" class="btn btn-secondary mr-1 mb-1">Edit</a>
             <a href="/restaurants/{{this.id}}" class="btn btn-secondary mr-1 mb-1">Detail</a>
-            
               <form action="/restaurants/{{this.id}}/delete" method="POST" class="form-for-delete">
-              <button type="submit" class="btn btn-outline-warning mr-1 mb-1">Delete</button>
+                <button type="submit" class="btn btn-outline-warning mr-1 mb-1 delete-button">Delete</button>
               </form>
           </div>
         </div>  
