--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,5 +35,6 @@
     <script src="/javascripts/jquery-3.4.1.min.js"></script>
     <script src="/javascripts/popper.min.js"></script>
     <script src="/javascripts/bootstrap.js"></script>
+    <script src="/javascripts/delete-alert.js"></script>
 </body>
 </html>
