update the ui of new.hbs and edit.hbs

--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,31 +1,31 @@
-<form action="/new" method="POST" class="row justify-content-center">
-    <div class="col-12">
+<form action="/new" method="POST" class="text-center">
+    <div>
         <label for="name">店名</label>
         <input type="text" name="name" id="name" placeholder="請輸入店名">
     </div>
-    <div class="col-12">
+    <div>
         <label for="category">類別</label>
         <input type="text" name="category" id="category" placeholder="請輸入類別">
     </div>
-    <div class="col-12">
+    <div>
         <label for="location">地址</label>
         <input type="text" name="location" id="location" placeholder="請輸入地址">
     </div>
-    <div class="col-12">
+    <div>
         <label for="phone">電話</label>
         <input type="text" name="phone" id="phone" placeholder="請輸入電話">
     </div>
-    <div class="col-12">
+    <div>
         <label for="description">店家描述</label>
         <textarea name="description" id="description" placeholder="請輸入店家描述"></textarea>
     </div>
-    <div class="col-12">
+    <div>
         <label for="image">店家照片</label>
         <input type="text" name="image" id="image" placeholder="請輸入照片網址">
     </div>
-    <div class="col-12">
+    <div>
         <label for="rating">評分</label>
         <input type="text" name="rating" id="rating" placeholder="請輸入評分">
     </div>
-    <button type="submit" class="col-12">Save</button>
+    <button type="submit" class>Save</button>
 </form>
