--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,31 +1,31 @@
-<form action="/restaurants/{{restaurant.id}}/edit" method="POST" class="row justify-content-center">
-    <div class="col-12">
-        <label for="name">店名</label>
+<form action="/restaurants/{{restaurant.id}}/edit" method="POST" class="text-center">
+    <div>
+        <label for="name">店名:</label>
         <input type="text" name="name" id="name" value="{{restaurant.name}}">
     </div>
-    <div class="col-12">
-        <label for="category">類別</label>
+    <div>
+        <label for="category">類別:</label>
         <input type="text" name="category" id="category" value="{{restaurant.category}}">
     </div>
-    <div class="col-12">
-        <label for="location">地址</label>
+    <div>
+        <label for="location">地址:</label>
         <input type="text" name="location" id="location" value="{{restaurant.location}}">
     </div>
-    <div class="col-12">
-        <label for="phone">電話</label>
+    <div>
+        <label for="phone">電話:</label>
         <input type="text" name="phone" id="phone" value="{{restaurant.phone}}">
     </div>
-    <div class="col-12">
-        <label for="description">店家描述</label>
+    <div>
+        <label for="description">店家描述:</label>
         <textarea name="description" id="description" >{{restaurant.description}}</textarea>
     </div>
-    <div class="col-12">
-        <label for="image">店家照片</label>
+    <div>
+        <label for="image">店家照片:</label>
         <input type="text" name="image" id="image" value="{{restaurant.image}}">
     </div>
-    <div class="col-12">
-        <label for="rating">評分</label>
+    <div>
+        <label for="rating">評分:</label>
         <input type="text" name="rating" id="rating" value="{{restaurant.rating}}">
     </div>
-    <button type="submit" class="col-12">Save</button>
+    <button type="submit">Save</button>
 </form>
