setting routes folder and files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
                         </a>
                     </div>
                     <div class="col-6 btn">
-                        <a href="/new">Add a restaurant</a>
+                        <a href="/restaurants/new">Add a restaurant</a>
                     </div>
                 </div>
             </div>
