--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,4 +1,4 @@
-<form action="/new" method="POST" class="text-center">
+<form action="/restaurants/new" method="POST" class="text-center">
     <div>
         <label for="name">店名</label>
         <input type="text" name="name" id="name" placeholder="請輸入店名">
