--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -36,7 +36,7 @@
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
       <div class="text-center">
         <a href="/restaurants/{{restaurant.id}}/edit" class="btn btn-secondary mr-1 mb-1">Edit</a>
-        <form action="/restaurants/{{restaurant.id}}/delete" method="POST" class="form-for-delete">
+        <form action="/restaurants/{{restaurant.id}}?_method=DELETE" method="POST" class="form-for-delete">
           <button type="submit" class="btn btn-outline-warning mr-1 mb-1 delete-button">Delete</button>
         </form>
       </div>
