--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<form action="/restaurants/{{restaurant.id}}/edit" method="POST" class="text-center">
+<form action="/restaurants/{{restaurant.id}}/edit?_method=PUT" method="POST" class="text-center">
     <div>
         <label for="name">店名:</label>
         <input type="text" name="name" id="name" value="{{restaurant.name}}">
