Add 'sort feature' in search.hbs with GET Method

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -14,6 +14,7 @@
     </div>
   </div>
 </div>
+
 <!-- restaurant list -->
 <div class="container mt-5">
   <div class="dropdown row justify-content-end mb-2">
@@ -21,12 +22,12 @@
       請選擇排序方式
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="/restaurants/sort/name-asc">中文店名:A-Z</a>
-      <a class="dropdown-item" href="/restaurants/sort/name-desc">中文店名:Z-A</a>
-      <a class="dropdown-item" href="/restaurants/sort/location">地區</a>
-      <a class="dropdown-item" href="/restaurants/sort/category">類別</a>
-      <a class="dropdown-item" href="/restaurants/sort/rating-asc">評分:低>高</a>
-      <a class="dropdown-item" href="/restaurants/sort/rating-desc">評分:高>低</a>
+      <a class="dropdown-item" href="/search/sort/name-asc">中文店名:A-Z</a>
+      <a class="dropdown-item" href="/search/sort/name-desc">中文店名:Z-A</a>
+      <a class="dropdown-item" href="/search/sort/location">地區</a>
+      <a class="dropdown-item" href="/search/sort/category">類別</a>
+      <a class="dropdown-item" href="/search/sort/rating-asc">評分:低>高</a>
+      <a class="dropdown-item" href="/search/sort/rating-desc">評分:高>低</a>
     </div>
   </div>
   <div class="row">
