--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,22 @@
-<h1>Login</h1>
+
+<div class="row">
+  <div class="col-4 m-auto">
+    <h1 class="text-center">Login</h1>
+    <div class="card">
+      <div class="card-body">
+        <form action="/users/login" method="POST">    
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" name="email" class="form-control" id="email" placeholder="輸入您的email">
+          </div>
+          <div class="form-group">
+            <label for="password">密碼</label>
+            <input type="password" name="password" class="form-control" id="password" placeholder="輸入您的密碼">
+          </div>
+          <button type="submit" class="btn btn-warning btn-block">Submit</button>
+          <p class="lead mt-2">還沒有帳號?<a href="/users/register">申請帳號</a> </p>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
