Add req.locals.isAuthenticated for changing view

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
 <!-- search bar -->
+
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
@@ -16,7 +17,10 @@
 </div>
 <!-- restaurant list -->
 <div class="container mt-5">
-  <div class="dropdown row justify-content-end mb-2">
+  <div class="dropdown row justify-content-between mb-2">
+    <div class="mb-2 btn btn-warning">
+      <a class="text-white"href="/restaurants/new">新增餐廳</a>
+    </div>
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       請選擇排序方式
     </button>
