add alert message of register, login and logout

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-4 m-auto">
     <h1 class="text-center">Login</h1>
+    {{> messages}}
     <div class="card">
       <div class="card-body">
         <form action="/users/register" method="POST">    
