--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,23 +13,15 @@
     <header>
         <!-- navigation -->
         <nav class="navbar navbar-light bg-light">
-            <div class="container">
-                <div class="row col-12">
-                    <div class="col-6">
-                        <a class="navbar-brand" href="/">
-                        <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
-                        我的餐廳清單
-                        </a>
-                    </div>
-                    <div class="col-6 btn">
-                        {{#if isAuthenticated}}
-                            <a href="/users/login">登出</a>
-                        {{else}}
-                            <a href="/users/logout">登入</a>
-                        {{/if}}
-                    </div>
-                </div>
-            </div>
+            <a class="navbar-brand" href="/">
+            <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+            我的餐廳清單
+            </a>
+            {{#if isAuthenticated}}
+            <a class="btn  btn-outline-primary" href="/users/logout">登出</a>
+            {{else}}
+            <a class="btn  btn-outline-primary" href="/users/login">登入</a>
+            {{/if}}
         </nav>
     <div class="banner"></div>
 </header>
