--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="col-4 m-auto">
     <h1 class="text-center">Login</h1>
+    {{> messages}}
     <div class="card">
       <div class="card-body">
         <form action="/users/login" method="POST">    
@@ -14,6 +15,7 @@
             <input type="password" name="password" class="form-control" id="password" placeholder="輸入您的密碼">
           </div>
           <button type="submit" class="btn btn-warning btn-block">Submit</button>
+          <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
           <p class="lead mt-2">還沒有帳號?<a href="/users/register">申請帳號</a> </p>
         </form>
       </div>
